Fix #109: Zoom and attribution out of viewport on iPhone 12 mini
This behavior is described at https://stackoverflow.com/a/70048720
For height `100vh` on mobile safari includes area of bottom bar, `100%` does not.

--- a/src/components/map.css
+++ b/src/components/map.css
@@ -1,7 +1,7 @@
 .map-wrap {
-    position: relative;
+    position: absolute;
     width: 100%;
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
     /* calculate height of the screen minus the heading */
 }
 
